src/test/deca/syntax/invalid/lexer/chaine_sQuotes-lex.corr
./src/test/deca/syntax/invalid/lexer/chaine_sQuotes.deca:11:0: token recognition error at: '''
